--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,3 +1,4 @@
+/* ...................font_family............................. */
 @font-face {
     font-family: 'American Captain';
     src: url(../font/American\ Captain.otf);
