--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,61 @@
-b.bbbbb{
-    
+*,
+*::after,
+*::before {
+    padding: 0;
+    margin: 0;
+    list-style-type: none !important;
+    text-decoration: none !important;
+    box-sizing: border-box;
+}
+
+.bg_image {
+    background-image: url(/assets/image/svg/Background.png);
+    background-size: cover;
+    width: 100%;
+    background-repeat: no-repeat;
+    border-radius: 0px;
+}
+
+.nav_btn {
+    border: 2px solid #FFFFFF;
+    border-radius: 8px;
+    padding: 8px 32px;
+}
+
+.nav_3_line {
+    background-color: chartreuse;
+    padding: 3px 18px;
+    margin-top: 3px;
+    border-radius: 10px;
+    z-index: 3;
+
+}
+
+@media (min-width:992px) {
+    .max_width_811_lg {
+        width: 811px;
+
+    }
+}
+
+@media (max-width:992px) {
+    nav ul {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        background-color: #817D76;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        transition: 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        line-height: 4;
+
+    }
+
+    .nav_left {
+        left: 0;
+    }
 }
