--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -11,15 +11,9 @@
 
 @font-face {
     font-family: 'SF Pro Display';
-    src: url(../font/SFPRODISPLAYBLACKITALIC.OTF);
     src: url(../font/SFPRODISPLAYBOLD.OTF);
-    src: url(../font/SFPRODISPLAYHEAVYITALIC.OTF);
-    src: url(../font/SFPRODISPLAYLIGHTITALIC.OTF);
     src: url(../font/SFPRODISPLAYMEDIUM.OTF);
     src: url(../font/SFPRODISPLAYREGULAR.OTF);
-    src: url(../font/SFPRODISPLAYSEMIBOLDITALIC.OTF);
-    src: url(../font/SFPRODISPLAYTHINITALIC.OTF);
-    src: url(../font/SFPRODISPLAYULTRALIGHTITALIC.OTF);
 }
 
 .ff_sf_pro {
@@ -51,7 +45,7 @@
     --fs-200: 200px;
     --fs-130: 130px;
     --fs-120: 120px;
-    --fs-110: 110x;
+    --fs-110: 110px;
     --fs-100: 100px;
     --fs-56: 56px;
     --fs-35: 35px;
@@ -182,4 +176,80 @@
 
 .fw_400 {
     font-weight: 400;
+}
+@media (max-width:1200px) {
+    :root {
+        /* font_size */
+        --fs-246: 246px;
+        --fs-200: 200px;
+        --fs-130: 90px;
+        --fs-120: 120px;
+        --fs-110: 110x;
+        --fs-100: 100px;
+        --fs-56: 56px;
+        --fs-35: 35px;
+        --fs-32: 32px;
+        --fs-30: 30px;
+        --fs-24: 24px;
+        --fs-20: 20px;
+        --fs-17: 17px;
+        --fs-15: 15px;
+    }
+}
+@media (max-width:992px) {
+    :root {
+        /* font_size */
+        --fs-246: 246px;
+        --fs-200: 200px;
+        --fs-130: 90px;
+        --fs-120: 120px;
+        --fs-110: 110x;
+        --fs-100: 100px;
+        --fs-56: 56px;
+        --fs-35: 35px;
+        --fs-32: 32px;
+        --fs-30: 30px;
+        --fs-24: 24px;
+        --fs-20: 20px;
+        --fs-17: 17px;
+        --fs-15: 15px;
+    }
+}
+@media (max-width:768px) {
+    :root {
+        /* font_size */
+        --fs-246: 246px;
+        --fs-200: 200px;
+        --fs-130: 170px;
+        --fs-120: 120px;
+        --fs-110: 110x;
+        --fs-100: 100px;
+        --fs-56: 56px;
+        --fs-35: 35px;
+        --fs-32: 32px;
+        --fs-30: 30px;
+        --fs-24: 24px;
+        --fs-20: 20px;
+        --fs-17: 17px;
+        --fs-15: 15px;
+    }
+}
+@media (max-width:576px) {
+    :root {
+        /* font_size */
+        --fs-246: 246px;
+        --fs-200: 200px;
+        --fs-130: 60px;
+        --fs-120: 120px;
+        --fs-110: 110x;
+        --fs-100: 100px;
+        --fs-56: 56px;
+        --fs-35: 35px;
+        --fs-32: 32px;
+        --fs-30: 30px;
+        --fs-24: 24px;
+        --fs-20: 20px;
+        --fs-17: 17px;
+        --fs-15: 15px;
+    }
 }
