--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -50,7 +50,7 @@
     --fs-200: 200px;
     --fs-130: 130px;
     --fs-120: 120px;
-    --fs-110: 110x;
+    --fs-110: 110px;
     --fs-100: 100px;
     --fs-56: 56px;
     --fs-35: 35px;
