--- a/assets/css/mandeep.css
+++ b/assets/css/mandeep.css
@@ -10,3 +10,29 @@
 .line_h_28{
     line-height: 28px;
 }
+.d_grid{
+        display: grid;
+        gap: 0px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.s_row_1{
+    grid-row: 1/1;
+    grid-column: 1/1;
+}
+.s_row_2{
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+.s_row_3{
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+.s_row_4{
+    grid-row: 1/2;
+    grid-column: 4/5;
+}
+
+/* media */
+@media (max-widht:576px) {
+    
+}
