--- a/assets/css/mandeep.css
+++ b/assets/css/mandeep.css
@@ -52,46 +52,67 @@
 
 }
 
-/* .hr_1 {
-    max-width: 303.63px;
-    height: 0px;
-    background: #F2F2F2;
-    border: 1px solid #F2F2F2;
-}
-
-.hr_2 {
-    max-width: 784.3px;
-    height: 0px;
-    background: #F2F2F2;
-    border: 1px solid #F2F2F2;
-} */
-.brr_0{
+.brr_0 {
     border-radius: 0;
 }
-.max_w_230{
+
+.h_200 {
+    height: 200px;
+}
+
+.max_w_230 {
     max-width: 230px;
 }
-.border_none{
+
+.border_none {
     border: none;
 }
-.outline_none{
+
+.outline_none {
     outline: none;
 }
-.border_b{
-    border-bottom: 2px solid #f2f2f2;
+
+.border_b {
+    border-bottom: 1px solid #F2F2F2;
 }
+
 .style_sub {
     border: 2px solid #FFFFFF;
     border-radius: 8px;
     padding: 4px 25px;
 }
-.opacity_5{
+
+.opacity_5 {
     opacity: 0.5;
 }
+
+.max_w_626 {
+    max-width: 580px;
+}
+
+.slider_box {
+    background-color: #010202;
+    width: 100%;
+    height: 100%;
+    bottom: -100%;
+    opacity: 0.7;
+}
+
+.slider_shadow:hover .slider_box {
+    bottom: 0;
+    transition: 0.5s;
+}
+
+.slider_btn {
+    border-radius: 8px;
+    border: 2px solid #FFFFFF;
+    padding: 8px 28px;
+}
+
 /* media */
-@media (min-width:1400px) {
+@media (min-width:1720px) {
     .container_xxl {
-        max-width: 1920px !important;
+        max-width: 1720px !important;
         padding-left: 12px !important;
         padding-right: 12px !important;
         margin-left: auto !important;
@@ -103,9 +124,8 @@
     .min_w_785 {
         width: 785px;
     }
-    .min_w_659{
+
+    .min_w_659 {
         width: 659px;
     }
 }
-
-@media (max-widht:576px) {}
