--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,16 +25,38 @@
     border-radius: 8px;
     padding: 8px 32px;
 }
-body{
-    background: #161616;
-    
+.nav_btn:hover {
+ background: red;
 }
+
 .nav_3_line {
-    background-color: chartreuse;
+    background-color: #F2F2F2;
     padding: 3px 18px;
     margin-top: 3px;
     border-radius: 10px;
     z-index: 3;
+
+}
+
+
+.scale:hover {
+    transform: translateY(-10%);
+}
+
+.text_line_efect::after {
+    content: '';
+    position: absolute;
+    background: var(--color-white);
+    width: 0;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    transition: all 0.5s linear;
+}
+
+.text_line_efect:hover:after {
+    width: 100%;
+
 
 }
 
@@ -48,6 +70,15 @@ body{
 
 .bg_black {
     background: #1A191A;
+
+}
+
+.z_index_1 {
+    z-index: 1;
+}
+
+.bg_black_1 {
+    background: #161616;
 }
 
 .bg_green {
@@ -67,6 +98,11 @@ body{
     height: 100%;
     border-radius: 16px;
     padding: 45px;
+
+}
+.box:hover {
+  transform: scale(1.1);
+  transition: all 0.1s linear;
 
 }
 
@@ -91,7 +127,7 @@ body{
 
 .blue_star {
     right: -3px;
-    bottom: -85px;
+    bottom: -40px;
 
 }
 
@@ -101,7 +137,7 @@ body{
 
 .green_star {
     left: 12px;
-    top: 80px;
+    top: 90px;
 
 }
 
@@ -115,13 +151,135 @@ body{
     max-width: 311px;
 }
 
+.line_h_28 {
+    line-height: 28px;
+}
+
+.d_grid {
+    display: grid;
+    gap: 0px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.s_row_1 {
+    grid-row: 1/1;
+    grid-column: 1/1;
+}
+
+.s_row_2 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+
+.s_row_3 {
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+
+.s_row_4 {
+    grid-row: 1/2;
+    grid-column: 4/5;
+}
+
+.s_row_5 {
+    grid-row: 1/2;
+    grid-column: 5/6;
+}
+
+.right0 {
+    right: 0;
+}
+
+.mt_115 {
+    margin-top: -115px;
+
+}
+
+.brr_0 {
+    border-radius: 0;
+}
+
+.h_200 {
+    height: 200px;
+}
+
+.max_w_230 {
+    max-width: 230px;
+}
+
+.border_none {
+    border: none;
+}
+
+.outline_none {
+    outline: none;
+}
+
+.border_b {
+    border-bottom: 1px solid #F2F2F2;
+}
+
+.style_sub {
+    border: 2px solid #FFFFFF;
+    border-radius: 8px;
+    padding: 4px 25px;
+}
+.style_sub:hover {
+    background: red;
+}
+
+.opacity_5 {
+    opacity: 0.5;
+}
+
+.max_w_626 {
+    max-width: 580px;
+}
+
+.slider_box {
+    background-color: #010202;
+    width: 100%;
+    height: 100%;
+    bottom: -100%;
+    opacity: 0.7;
+}
+
+.slider_shadow:hover .slider_box {
+    bottom: 0;
+    transition: 0.5s;
+}
+
+.slider_btn {
+    border-radius: 8px;
+    border: 2px solid #FFFFFF;
+    padding: 8px 28px;
+}
+
+.m_top_80 {
+    margin-top: -80px;
+}
+
+.line_h_100 {
+    line-height: 100px;
+}
+
+@media (min-width:1200px) {
+    .min_w_785 {
+        width: 785px;
+    }
+
+    .min_w_659 {
+        width: 659px;
+    }
+}
+
 @media (min-width:1720px) {
     .container_xxl {
         max-width: 1720px !important;
         padding-left: 12px !important;
         padding-right: 12px !important;
         margin-left: auto !important;
-        margin-right: auto!important;
+        margin-right: auto !important;
     }
 }
 
@@ -129,13 +287,6 @@ body{
     .max_width_811_lg {
         width: 811px;
     }
-
-
-
-    /* .max_width_250 {
-        max-width: 250px;
-
-    } */
 
     .max_wdth_340 {
         max-width: 340px;
@@ -159,7 +310,7 @@ body{
         position: fixed;
         top: 0;
         left: -100%;
-        background-color: #817D76;
+        background-color: #161616;
         width: 100%;
         height: 100vh;
         justify-content: center;
