--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,8 @@
     padding: 8px 32px;
 }
 .nav_btn:hover {
- background: red;
+ background: blue;
+
 }
 
 .nav_3_line {
@@ -155,36 +156,6 @@
     line-height: 28px;
 }
 
-.d_grid {
-    display: grid;
-    gap: 0px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-
-.s_row_1 {
-    grid-row: 1/1;
-    grid-column: 1/1;
-}
-
-.s_row_2 {
-    grid-row: 1/2;
-    grid-column: 2/3;
-}
-
-.s_row_3 {
-    grid-row: 1/2;
-    grid-column: 3/4;
-}
-
-.s_row_4 {
-    grid-row: 1/2;
-    grid-column: 4/5;
-}
-
-.s_row_5 {
-    grid-row: 1/2;
-    grid-column: 5/6;
-}
 
 .right0 {
     right: 0;
@@ -225,7 +196,7 @@
     padding: 4px 25px;
 }
 .style_sub:hover {
-    background: red;
+    background: green;
 }
 
 .opacity_5 {
